@@ -155,7 +155,8 @@ module CCM_DDS_PSAT
    module Typed_PSAT<typename T, sequence<T> TSeq>
    {
       alias CCM_DDS::Typed<T, TSeq> DDS_Typed;
-      alias DDS_Entity<T, TSeq> DDS_Typed_Entity; // @todo, remove again
+      typedef DDS_Typed::DataReader DataReader;
+      typedef DDS_Typed::DataWriter DataWriter;
 
       local interface PSAT_BufferControl
       {
